--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "P5Shapes",
-  "version": "1.0.0",
+  "name": "GraphicsAndShapes",
+  "version": "1.0.2",
   "description": "",
   "main": "p5Shapes.js",
   "type": "module",
   "dependencies": {
-    "express": "^4.18.2"
+    "es-utilities": "^1.0.3"
   },
   "devDependencies": {},
   "scripts": {
